Edited wiki page through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -8,7 +8,7 @@
  * None
 
 ==Bug Fixes==
- * [http://code.google.com/p/icaltimetracker/issues/detail?id=6&can=1 6] Negative _Percentage Worked_ for weekends on Daily Tab.
+ * issue 6 Negative _Percentage Worked_ for weekends on Daily Tab.
  * [http://code.google.com/p/icaltimetracker/issues/detail?id=7&can=1 7] Incorrect _Total_ and _Percentage Worked_ values for the 5th column on the Daily Tab.
 
 ----
