--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -30,7 +30,14 @@ The color of the rows in iCalTimeTracker's tables is determined by the color of 
 ===Data Refresh===
 By default your iCal data is re-read every five minutes. You can adjust this time in the _General_ tab of the iCalTimeTracker preferences. If you need to re-process the data before the next scheduled refresh, simply use the _Refresh Now_ button on the main window.
 
-*Note:* Current the UI says "minutes" and limits you from 60 to 1,440. The time is actually being processed in seconds (e.g. once a minute to once a day). Follow issue 14 to see when this is fixed.
+===Calculating Time===
+====Start Of Week====
+On the _Work Days_ tab of the iCalTimeTracker preferences, you may select the day of the week that your billing week starts. The default is Sunday for a Sunday - Saturday schedule, and selecting Wednesday would give you a Wednesday - Tuesday schedule.
+
+This option only effects the _Weekly_ view.
+
+====Percentage Worked====
+The calculation for the _Percentage Worked_ values can be controlled by setting your _Work Hours_ on the _Work Days_ tab of the iCalTimeTracker preferences. Use these values to set what your expected number of hours should be for the given day. For days that you enter 0, any hours entered for that day of the week (via iCal) will be calculated as 100%.
 
 ===Adding Time===
 To add time, simply create an event in iCal that belongs to a monitored calendar. iCalTimeTracker can process both regular and all-day events.
